7/5/23:
-Engine events system
-Basic terrain configuration and regeneration
-Gizmos for transforming meshes using ImGuizmo
-Scene renderer
-Basic material editing
-Basic HDR implemented (no luminance maps yet)
-Atmospheric scattering in fog
-All lights work with volumetric fog
-Fog optimizations (looks terrible currently, need depth-aware upsampling)
-Fixed spotlight shadows
-Modified render pipeline to support post-lighting passes using a shared depth buffer
-Shared framebuffer textures
-Switched to column-major matrix standard
-Adjustments to debug editor UI
-General refactoring

17/5/23:
-Volumetric fog
-Fog controls
-Made textures and framebuffers work more nicely together
-Switched from GLCall to more modern debug message callback for opengl debugging.
-Switched to deferred rendering pipeline
-Modular materials, can be changed on meshes now
-More transform buffer optimizations, moved to ssbos, ~5x increased performance on many moving objects
-Fixed dreadful activateprogram function which was re-linking the program every time it was called (400 to 1400fps in some areas)


24/4/23:
-Basic Entity editor
-Very underdeveloped asset viewer/editor
-ECS improvements
-Entity selection through mouse picking
-Native scripting
-Rewrote shader, shaderlibrary, framebuffer and framebufferlibrary apis to make them actually usable
-AABB generation for meshes
-Texture generation more customizable
-Lighting shader optimizations (reduced branching)
-Optimizations to transform buffer code, moving components much faster
-CMake integration
-Linked most dependencies as submodules, every library also now static
-Reduced build times with precompiled headers
-Other things

9/4/23:
-Terrain texture blending
-Quadtree based dynamic terrain LOD
-Asynchronous terrain chunk loading system
-Frustum culling for terrain
-Optimizations to reduce build times
-Fixed lighting bug caused by calculating lighting only in tangent space without normal maps provided

01/4/23: