@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,9
 Size=400,400
 Collapsed=0
 
@@ -14,7 +14,7 @@ Size=339,180
 Collapsed=0
 
 [Window][Tools]
-Pos=83,34
+Pos=25,52
 Size=521,604
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=528,552
 Collapsed=0
 
 [Window][Assets]
-Pos=154,670
+Pos=111,868
 Size=1600,400
 Collapsed=0
 
@@ -44,14 +44,14 @@ Size=671,357
 Collapsed=0
 
 [Window][Texture Editor]
-Pos=1191,498
+Pos=1054,862
 Size=548,293
 Collapsed=0
 
 [Window][Material editor]
-Pos=1324,213
+Pos=1263,679
 Size=382,394
-Collapsed=0
+Collapsed=1
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
