@@ -1,4 +1,0 @@
-#version 430 core
-
-void main() {
-}
